1.0.6: 返回栏恢复 + 启动页动态背景 + 日志窗补全 + 面板提亮
- 新增悬浮返回栏(qcl_back_bar)，恢复二级页面的返回/主页/关闭入口
  （此前移除标题栏时被误删，40+ 二级页面自动受益）
- 启动页 Splash 接入 DynamicBackground 四图轮换；有自定义主题图时尊重自定义
- LaunchLogWindow 扩展 logcat 标签到 7 个 + 顶部基础信息区 + 噪声过滤/超长行截断
- 修复从悬浮窗开关打开日志窗时不打印基础信息的问题
- qcl_panel_gray / launcher_ui_background 提亮 #B8CFCFCF -> #C8EDEDED